--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:id="@+id/listView"/>
+
 </RelativeLayout>
